--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label t('label.date') %><br>
-    <%= f.date_select :date %>
+    <%= f.text_field :date %>
   </div>
   <div class="field">
     <%= f.label t('label.type') %><br>
