translate meal name for order

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Meal:</strong>
-  <%= link_to @order.meal.name, meal_path(@order.meal) %>
+  <%= link_to "#{@order.meal.date} - " + t("label." + @order.meal.meal_type), meal_path(@order.meal) %>
 </p>
 
 <p>
