--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th>Meal</th>      
-      <th>Dish</th>
+      <th><%= t('label.meal') %></th>      
+      <th><%= t('label.dish') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,7 +12,7 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= link_to order.meal.name, meal_path(order.meal) %></td>        
+        <td><%= link_to "#{order.meal.date} - " + t("label." + order.meal.meal_type), meal_path(order.meal) %></td>        
         <td><%= link_to order.dish.name, dish_path(order.dish) %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
