--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,14 +1,43 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Date:</strong>
+  <strong><%= t('label.date') %>:</strong>
   <%= @meal.date %>
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @meal.meal_type %>
+  <strong><%= t('label.type') %>:</strong>
+  <%= t('label.' + @meal.meal_type) %>
 </p>
+
+<p>
+  <strong><%= t('label.order') %>:</strong><br/>
+  <table>
+    <thead>
+      <tr>
+        <th><%= t('label.name') %></th>
+        <th><%= t('label.book') %></th>
+        <th><%= t('label.page') %></th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @meal.orders.each do |order| %>
+        <tr>
+          <td><%= order.dish.name %></td>
+          <td><%= link_to order.dish.book.name, order.dish.book %></td>
+          <td><%= auto_link order.dish.page, :html => { :target => '_blank' } %></td>
+          <td><%= link_to 'Show', order.dish %></td>
+          <td><%= link_to 'Edit', edit_order_path(order) %></td>
+          <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>  
+</p>
+
+
 
 <%= link_to 'Edit', edit_meal_path(@meal) %> |
 <%= link_to 'Back', meals_path %>
