--- a/app/views/burdens/edit.html.erb
+++ b/app/views/burdens/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @burden %> |
-<%= link_to 'Back', burdens_path %>
+<%= link_to t('show'), @burden %> |
+<%= link_to t('back'), burdens_path %>
