--- a/app/views/burdens/index.html.erb
+++ b/app/views/burdens/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing burdens</h1>
+<h1><%= "#{t('burden')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Material</th>
-      <th>Dish</th>
-      <th>Quantity</th>
+      <th><%= t('material') %></th>
+      <th><%= t('dish') %></th>
+      <th><%= t('quantity') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +13,14 @@
   <tbody>
     <% @burdens.each do |burden| %>
       <tr>
-        <td><%= link_to burden.material.name, material_path(burden.material) %></td>
-        <td><%= link_to burden.dish.name, dish_path(burden.dish) %></td>
+        <!-- % puts "***********", burden.inspect %-->
+        <%  %>
+        <td><%= link_to burden.material.name, material_path(burden.material) if burden.material %></td>
+        <td><%= link_to burden.dish.name, dish_path(burden.dish) if burden.dish %></td>
         <td><%= burden.quantity %> g</td>
-        <td><%= link_to 'Show', burden %></td>
-        <td><%= link_to 'Edit', edit_burden_path(burden) %></td>
-        <td><%= link_to 'Destroy', burden, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('show'), burden %></td>
+        <td><%= link_to t('edit'), edit_burden_path(burden) %></td>
+        <td><%= link_to t('destroy'), burden, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Burden', new_burden_path %>
+<%= link_to "#{t('new')}#{t('burden')}", new_burden_path %>
