--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing books</h1>
+<h1><%= "#{t('book')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Url</th>
+      <th><%= t('name') %></th>
+      <th><%= t('url') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
       <tr>
         <td><%= book.name %></td>
         <td><%= auto_link book.url, :html => { :target => '_blank' }  %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('show'), book %></td>
+        <td><%= link_to t('edit'), edit_book_path(book) %></td>
+        <td><%= link_to t('destroy'), book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to "#{t('new')}#{t('book')}", new_book_path %>
