--- a/app/views/burdens/new.html.erb
+++ b/app/views/burdens/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New burden</h1>
+<h1><%= t('new') + t('burden') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', burdens_path %>
+<%= link_to t('back'), burdens_path %>
