--- a/app/views/dishes/edit.html.erb
+++ b/app/views/dishes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @dish %> |
-<%= link_to 'Back', dishes_path %>
+<%= link_to t('show'), @dish %> |
+<%= link_to t('back'), dishes_path %>
