--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing dishes</h1>
+<h1><%= "#{t('dish')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Book</th>
-      <th>Page</th>
+      <th><%= t('name') %></th>
+      <th><%= t('book') %></th>
+      <th><%= t('page') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +16,9 @@
         <td><%= dish.name %></td>
         <td><%= link_to dish.book.name, book_path(dish.book) %></td>
         <td><%= auto_link dish.page, :html => { :target => '_blank' } %></td>
-        <td><%= link_to 'Show', dish %></td>
-        <td><%= link_to 'Edit', edit_dish_path(dish) %></td>
-        <td><%= link_to 'Destroy', dish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('show'), dish %></td>
+        <td><%= link_to t('edit'), edit_dish_path(dish) %></td>
+        <td><%= link_to t('destroy'), dish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Dish', new_dish_path %>
+<%= link_to "#{t('new')}#{t('dish')}", new_dish_path %>
