--- a/app/views/dishes/new.html.erb
+++ b/app/views/dishes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New dish</h1>
+<h1><%= t('new') + t('dish') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', dishes_path %>
+<%= link_to t('back'), dishes_path %>
