--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,18 @@
 <body>
   
 <tr>
-  <td><%= link_to t('label.book'), '/books' %></td>
-  <td><%= link_to t('label.dish'), '/dishes' %></td>
-  <td><%= link_to t('label.burden'), '/burdens' %></td>
-  <td><%= link_to t('label.material'), '/materials' %></td>
-  <td><%= link_to t('label.meal'), '/meals' %></td>
-  <td><%= link_to t('label.order'), '/orders' %></td>
+  <td><%= link_to t('book'), '/books' %></td>
+  <td><%= link_to t('dish'), '/dishes' %></td>
+  <td><%= link_to t('burden'), '/burdens' %></td>
+  <td><%= link_to t('material'), '/materials' %></td>
+  <td><%= link_to t('meal'), '/meals' %></td>
+  <td><%= link_to t('order'), '/orders' %></td>
   <% if session[:user_id] %>
-    <td><%= link_to t('label.profile'), user_path(session[:user_id]) %></td>
-    <td><%= link_to t('label.logout'), logout_path, method: :delete %></td>
+    <td><%= link_to t('profile'), user_path(session[:user_id]) %></td>
+    <td><%= link_to t('logout'), logout_path, method: :delete %></td>
   <% else  %>
-    <td><%= link_to t('label.login'), login_path %></td> ( or 
-    <td><%= link_to t('label.register'), register_path %></td> ? )
+    <td><%= link_to t('login'), login_path %></td> ( or 
+    <td><%= link_to t('register'), register_path %></td> ? )
   <% end %>
   
 </tr>  
