--- a/app/views/materials/edit.html.erb
+++ b/app/views/materials/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @material %> |
-<%= link_to 'Back', materials_path %>
+<%= link_to t('show'), @material %> |
+<%= link_to t('back'), materials_path %>
