--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing materials</h1>
+<h1><%= "#{t('material')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Balance</th>
+      <th><%= t('name') %></th>
+      <th><%= t('balance') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
       <tr>
         <td><%= material.name %></td>
         <td><%= material.balance %> g</td>
-        <td><%= link_to 'Show', material %></td>
-        <td><%= link_to 'Edit', edit_material_path(material) %></td>
-        <td><%= link_to 'Destroy', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t(t('show')), material %></td>
+        <td><%= link_to t('edit'), edit_material_path(material) %></td>
+        <td><%= link_to t(t('destroy')), material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Material', new_material_path %>
+<%= link_to t('new') + ' ' + t('material'), new_material_path %>
