--- a/app/views/materials/new.html.erb
+++ b/app/views/materials/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New material</h1>
+<h1><%= t('new') + t('material') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', materials_path %>
+<%= link_to t('back'), materials_path %>
