--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :date %>
   </div>
   <div class="field">
-    <%= f.label t('label.type') %><br>
-    <%= f.select :meal_type, Meal::MEAL_TYPES.map { |e| [ t("label.#{e}"), e] }, promot: 'Select a meal' %>
+    <%= f.label t('type') %><br>
+    <%= f.select :meal_type, Meal::MEAL_TYPES.map { |e| [ t("#{e}"), e] }, promot: 'Select a meal' %>
   </div>
   <div class="actions">
     <%= f.submit %>
