--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @meal %> |
-<%= link_to 'Back', meals_path %>
+<%= link_to t('show'), @meal %> |
+<%= link_to t('back'), meals_path %>
