--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing meals</h1>
+<h1><%= "#{t('meal')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
       <th><%= t('label.date') %></th>
-      <th><%= t('label.type') %></th>
+      <th><%= t('type') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +13,12 @@
     <% @meals.each do |meal| %>
       <tr>
         <td><%= meal.date %></td>
-        <td><%= t("label.#{meal.meal_type}") %></td>
-        <td><%= link_to t('label.show'), meal %></td>
-        <td><%= link_to t('label.up'), "/meals/#{meal.id}/up", :method => :post, data: { confirm: 'Are you sure?' }  %></td>
-        <td><%= link_to t('label.down'), "/meals/#{meal.id}/down", :method => :post, data: { confirm: 'Are you sure?' }  %></td>
-        <td><%= link_to t('label.edit'), edit_meal_path(meal) %></td>
-        <td><%= link_to t('label.destroy'), meal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= t("#{meal.meal_type}") %></td>
+        <td><%= link_to t(t('show')), meal %></td>
+        <td><%= link_to t('up'), "/meals/#{meal.id}/up", :method => :post, data: { confirm: 'Are you sure?' }  %></td>
+        <td><%= link_to t('down'), "/meals/#{meal.id}/down", :method => :post, data: { confirm: 'Are you sure?' }  %></td>
+        <td><%= link_to t('edit'), edit_meal_path(meal) %></td>
+        <td><%= link_to t(t('destroy')), meal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Meal', new_meal_path %>
+<%= link_to t('new') + t('meal'), new_meal_path %>
