--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -6,18 +6,18 @@
 </p>
 
 <p>
-  <strong><%= t('label.type') %>:</strong>
-  <%= t('label.' + @meal.meal_type) %>
+  <strong><%= t('type') %>:</strong>
+  <%= t( @meal.meal_type) %>
 </p>
 
 <p>
-  <strong><%= t('label.order') %>:</strong><br/>
+  <strong><%= t('order') %>:</strong><br/>
   <table>
     <thead>
       <tr>
-        <th><%= t('label.name') %></th>
-        <th><%= t('label.book') %></th>
-        <th><%= t('label.page') %></th>
+        <th><%= t('name') %></th>
+        <th><%= t('book') %></th>
+        <th><%= t('page') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -28,9 +28,9 @@
           <td><%= order.dish.name %></td>
           <td><%= link_to order.dish.book.name, order.dish.book %></td>
           <td><%= auto_link order.dish.page, :html => { :target => '_blank' } %></td>
-          <td><%= link_to 'Show', order.dish %></td>
-          <td><%= link_to 'Edit', edit_order_path(order) %></td>
-          <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to t('show'), order.dish %></td>
+          <td><%= link_to t('edit'), edit_order_path(order) %></td>
+          <td><%= link_to t('destroy'), order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
@@ -39,5 +39,5 @@
 
 
 
-<%= link_to 'Edit', edit_meal_path(@meal) %> |
-<%= link_to 'Back', meals_path %>
+<%= link_to t('edit'), edit_meal_path(@meal) %> |
+<%= link_to t('back'), meals_path %>
