--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @order %> |
-<%= link_to 'Back', orders_path %>
+<%= link_to t('show'), @order %> |
+<%= link_to t('back'), orders_path %>
