--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing orders</h1>
+<h1><%= "#{t('order')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
-      <th><%= t('label.meal') %></th>      
-      <th><%= t('label.dish') %></th>
+      <th><%= t('meal') %></th>      
+      <th><%= t('dish') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,11 +12,8 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= link_to "#{order.meal.date} - " + t("label." + order.meal.meal_type), meal_path(order.meal) %></td>        
+        <td><%= link_to "#{order.meal.date} - " + t( order.meal.meal_type), meal_path(order.meal) %></td>        
         <td><%= link_to order.dish.name, dish_path(order.dish) %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +21,4 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
+<%= link_to "#{t('new')}#{t('order')}", new_order_path %>
