--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing users</h1>
+<h1><%= "#{t('user')}#{t('listing')}" %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th><%= t('name') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,9 +12,9 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('show'), user %></td>
+        <td><%= link_to t('edit'), edit_user_path(user) %></td>
+        <td><%= link_to t('destroy'), user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to t('new') + t('user'), new_user_path %>
