--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -5,14 +5,14 @@
     
   <%= form_tag do %>
     <fieldset>
-      <legend><%= t('please.login') %></legend>
+      <legend><%= t('please_login') %></legend>
       <div>
-        <%= label_tag :name, t('login.name'): %>
+        <%= label_tag :name, t('login_name') %>:
         <%= text_field_tag :name, params[:name] %>
       </div>
       
       <div>
-        <%= label_tag :password, t('password'): %>
+        <%= label_tag :password, t('password') %>:
         <%= password_field_tag :password, params[:password] %>
       </div>
       
