--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -5,19 +5,19 @@
     
   <%= form_tag do %>
     <fieldset>
-      <legend>Please Log In</legend>
+      <legend><%= t('please_login') %></legend>
       <div>
-        <%= label_tag :name, 'Name:' %>
+        <%= label_tag :name, t('login_name') %>:
         <%= text_field_tag :name, params[:name] %>
       </div>
       
       <div>
-        <%= label_tag :password, 'Password:' %>
+        <%= label_tag :password, t('password') %>:
         <%= password_field_tag :password, params[:password] %>
       </div>
       
       <div>
-        <%= submit_tag 'Login' %>
+        <%= submit_tag t('login') %>
       </div>
     </fieldset>
   <% end  %>
