--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -16,8 +16,6 @@
     <thead>
       <tr>
         <th><%= t('name') %></th>
-        <th><%= t('book') %></th>
-        <th><%= t('page') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -25,11 +23,7 @@
     <tbody>
       <% @meal.orders.each do |order| %>
         <tr>
-          <td><%= order.dish.name %></td>
-          <td><%= link_to order.dish.book.name, order.dish.book %></td>
-          <td><%= auto_link order.dish.page, :html => { :target => '_blank' } %></td>
-          <td><%= link_to t('show'), order.dish %></td>
-          <td><%= link_to t('edit'), edit_order_path(order) %></td>
+          <td><%= link_to order.dish.name, order.dish %></td>
           <td><%= link_to t('destroy'), order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
