--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -30,6 +30,9 @@
       <%= builder.label :material_id, t('material')  %>
       <%= builder.select :material_id, Material.all.map { |e| [e.name, e.id] } %>
       <%= builder.text_field :quantity %> g
+      <%= f.hidden_field :destroy %>
+      <%= link_to_function t('destroy'), 'remove_fields(this)' %>
+      
     </p>    
     <% end %>
   </div>
