--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -21,7 +21,7 @@
     <thead>
       <tr>
         <th><%= t('name') %></th>
-        <th><%= t('balance') %></th>
+        <th><%= t('quantity') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
