change shopping.date from text to date

--- a/app/views/shoppings/_form.html.erb
+++ b/app/views/shoppings/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label t('label.date') %><br>
-    <%= f.text_field :date %>
+    <%= f.date_field :date %>
   </div>
 
   <% meal_index = 0 %>
