--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,24 +1,32 @@
 <h1><%= "#{t('order')}#{t('listing')}" %></h1>
 
-<table>
+<%= link_to "#{t('new')}#{t('order')}", new_order_path %>
+<br/><br/>
+
+<table width="50%" border="1" cellpadding="0" bordercolorlight="#999999" bordercolordark="#FFFFFF" cellspacing="0" align="left">
   <thead>
     <tr>
       <th><%= t('meal') %></th>      
-      <th><%= t('dish') %></th>
-      <th colspan="3"></th>
+      <th><%= t('breakfast') %></th>
+      <th><%= t('lunch') %></th>
+      <th><%= t('dinner') %></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @orders.each do |order| %>
+    <% @meals.each do |date, meals| %>
       <tr>
-        <td><%= link_to "#{order.meal.date} - " + t( order.meal.meal_type), meal_path(order.meal) %></td>        
-        <td><%= link_to order.dish.name, dish_path(order.dish) %></td>
+        <td><%= date %></td>    
+        <% ['breakfast', 'lunch', 'dinner'].each do |type| %>
+          <td>
+            <% next unless meals.has_key?(type) %>
+            <% meals[type].each do |dish| %>
+              <%= link_to dish.name, dish %><br/>
+            <% end %>           
+          </td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to "#{t('new')}#{t('order')}", new_order_path %>
