--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th><%= t('category') %></th>
       <th><%= t('name') %></th>
       <th><%= t('balance') %></th>
       <th colspan="3"></th>
@@ -12,6 +13,7 @@
   <tbody>
     <% @materials.each do |material| %>
       <tr>
+        <td><%= t(material.category) if material.category %></td>
         <td><%= material.name %></td>
         <td><%= material.balance %> g</td>
         <td><%= link_to t(t('show')), material %></td>
