--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong><%= "#{t('name')}:" %></strong>
+  <strong><%= t('name') %>:</strong>
   <%= @user.name %>
 </p>
 
