--- a/app/views/materials/edit.html.erb
+++ b/app/views/materials/edit.html.erb
@@ -1,6 +1,5 @@
-<h1><%= t('edit') + t('material') %></h1>
-
-<%= render 'form' %>
-
-<%= link_to t('show'), @material %> |
-<%= link_to t('back'), materials_path %>
+<%- model_class = Material -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', t('edit') + t('material')], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
