--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,29 +1,37 @@
-<h1><%= "#{t('material')}#{t('listing')}" %></h1>
-
-<table>
+<%- model_class = Material -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => "#{t('material')}#{t('listing')}" %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th><%= t('category') %></th>
-      <th><%= t('name') %></th>
-      <th><%= t('balance') %></th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(t('category')) %></th>
+      <th><%= model_class.human_attribute_name(t('name')) %></th>
+      <th><%= model_class.human_attribute_name(t('balance')) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @materials.each do |material| %>
       <tr>
         <td><%= t(material.category) if material.category %></td>
         <td><%= material.name %></td>
         <td><%= material.balance %> g</td>
-        <td><%= link_to t(t('show')), material %></td>
-        <td><%= link_to t('edit'), edit_material_path(material) %></td>
-        <td><%= link_to t(t('destroy')), material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_material_path(material), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      material_path(material),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to t('new') + ' ' + t('material'), new_material_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_material_path,
+            :class => 'btn btn-primary' %>
