--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -1,18 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Material -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong><%= t('category') %>:</strong>
-  <%= t(@material.category) if @material.category %>
-</p>
-<p>
-  <strong><%= t('name') %>:</strong>
-  <%= @material.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @material.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:balance) %>:</strong></dt>
+  <dd><%= @material.balance %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:category) %>:</strong></dt>
+  <dd><%= @material.category %></dd>
+</dl>
 
-<p>
-  <strong>Balance:</strong>
-  <%= @material.balance %>
-</p>
-
-<%= link_to t('edit'), edit_material_path(@material) %> |
-<%= link_to t('back'), materials_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              materials_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_material_path(@material), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              material_path(@material),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
