--- a/app/views/shoppings/edit.html.erb
+++ b/app/views/shoppings/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing shopping</h1>
-
-<%= render 'form' %>
+<%- model_class = Shopping -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Show', @shopping %> |
 <%= link_to 'Back', shoppings_path %>
