--- a/app/views/shoppings/index.html.erb
+++ b/app/views/shoppings/index.html.erb
@@ -1,25 +1,33 @@
-<h1>Listing shoppings</h1>
-
-<table>
+<%- model_class = Shopping -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('shopping') %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th><%= t('label.date') %></th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(t('label.date')) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @shoppings.each do |shopping| %>
       <tr>
-        <td><%= shopping.date %>
-        <td><%= link_to 'Show', shopping %></td>
-        <td><%= link_to 'Edit', edit_shopping_path(shopping) %></td>
-        <td><%= link_to 'Destroy', shopping, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= shopping.date %></td>
+        <td>
+          <%= link_to 'Show', shopping %>	
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_shopping_path(shopping), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      shopping_path(shopping),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Shopping', new_shopping_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_shopping_path,
+            :class => 'btn btn-primary' %>
