--- a/app/views/shoppings/new.html.erb
+++ b/app/views/shoppings/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New shopping</h1>
-
-<%= render 'form' %>
+<%- model_class = Shopping -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Back', shoppings_path %>
